--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-hw25",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://maksym-ryaboshapka.github.io/react-hw25/",
+  "private": false,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
@@ -18,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
